--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 html {
   font-family: sans-serif;
-  font-size: 2vw;
   line-height: 1.6;
   text-rendering: optimizeLegibility;
 }
@@ -11,6 +10,7 @@ main[role=main],
 footer[role=contentinfo] {
   margin: 0 auto;
   max-width: 30rem;
+  padding: 0 1rem;
 }
 
 footer[role=contentinfo] {
