--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,16 @@ html {
   text-rendering: optimizeLegibility;
 }
 
-header[role=banner],
-nav[role=navigation],
-main[role=main],
-footer[role=contentinfo] {
+body > header,
+body > nav,
+body > main,
+body > footer {
   margin: 0 auto;
   max-width: 33rem;
   padding: 0 1rem;
 }
 
-footer[role=contentinfo] {
+body > footer {
   border-top: 1px solid black;
   font-size: 85%;
   padding-bottom: 3rem;
@@ -35,7 +35,7 @@ ol li, ul li {
   padding: 0.25rem 0;
 }
 
-nav[role=navigation] ol {
+body > nav ol {
   list-style-type: none;
   padding: 0;
 }
